@@ -9,6 +9,7 @@ Changes since 2.1.3
 5. src/slvideo.c: #define UNICODE so that wide-character functions are
    used instead of byte functions.  Also codepage set to 65001 in
    unicode mode.
+6. src/slvideo.c: Added SLtt_is_utf8_mode.
 
 Changes since 2.1.2
 1. autoconf/Makefile.in: If any */Makefile.in is more recent than the
